--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1051</width>
-    <height>781</height>
+    <width>1280</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,9 +24,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>-21</y>
-      <width>1051</width>
-      <height>801</height>
+      <y>-25</y>
+      <width>1280</width>
+      <height>900</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -41,8 +41,8 @@
     <widget class="QLabel" name="time">
      <property name="geometry">
       <rect>
-       <x>870</x>
-       <y>35</y>
+       <x>1120</x>
+       <y>45</y>
        <width>91</width>
        <height>31</height>
       </rect>
@@ -54,8 +54,8 @@
     <widget class="QPushButton" name="btnReboot">
      <property name="geometry">
       <rect>
-       <x>970</x>
-       <y>30</y>
+       <x>1220</x>
+       <y>40</y>
        <width>51</width>
        <height>41</height>
       </rect>
@@ -70,7 +70,7 @@
     <widget class="QPushButton" name="btn_station1">
      <property name="geometry">
       <rect>
-       <x>45</x>
+       <x>150</x>
        <y>480</y>
        <width>241</width>
        <height>91</height>
@@ -98,7 +98,7 @@
     <widget class="QPushButton" name="btn_station2">
      <property name="geometry">
       <rect>
-       <x>285</x>
+       <x>420</x>
        <y>480</y>
        <width>241</width>
        <height>91</height>
@@ -129,7 +129,7 @@
     <widget class="QPushButton" name="btn_station3">
      <property name="geometry">
       <rect>
-       <x>525</x>
+       <x>692</x>
        <y>480</y>
        <width>241</width>
        <height>91</height>
@@ -157,7 +157,7 @@
     <widget class="QPushButton" name="btn_station4">
      <property name="geometry">
       <rect>
-       <x>765</x>
+       <x>968</x>
        <y>480</y>
        <width>241</width>
        <height>91</height>
@@ -185,7 +185,7 @@
     <widget class="QLabel" name="lb_station1">
      <property name="geometry">
       <rect>
-       <x>65</x>
+       <x>170</x>
        <y>510</y>
        <width>101</width>
        <height>31</height>
@@ -201,7 +201,7 @@
     <widget class="QLabel" name="lb_station2">
      <property name="geometry">
       <rect>
-       <x>300</x>
+       <x>450</x>
        <y>510</y>
        <width>111</width>
        <height>31</height>
@@ -217,7 +217,7 @@
     <widget class="QLabel" name="lb_station3">
      <property name="geometry">
       <rect>
-       <x>545</x>
+       <x>710</x>
        <y>510</y>
        <width>111</width>
        <height>31</height>
@@ -233,7 +233,7 @@
     <widget class="QLabel" name="lb_station4">
      <property name="geometry">
       <rect>
-       <x>780</x>
+       <x>990</x>
        <y>510</y>
        <width>111</width>
        <height>31</height>
@@ -249,9 +249,9 @@
     <widget class="QLabel" name="gunsel_logo">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>170</x>
        <y>210</y>
-       <width>900</width>
+       <width>951</width>
        <height>190</height>
       </rect>
      </property>
@@ -262,7 +262,7 @@
     <widget class="QLabel" name="lb_mAvailable_scooters">
      <property name="geometry">
       <rect>
-       <x>680</x>
+       <x>850</x>
        <y>525</y>
        <width>111</width>
        <height>31</height>
@@ -278,7 +278,7 @@
     <widget class="QLabel" name="lb_LeAvailable_scooters">
      <property name="geometry">
       <rect>
-       <x>445</x>
+       <x>585</x>
        <y>525</y>
        <width>111</width>
        <height>31</height>
@@ -294,7 +294,7 @@
     <widget class="QLabel" name="lb_GoAvailable_spot">
      <property name="geometry">
       <rect>
-       <x>920</x>
+       <x>1120</x>
        <y>495</y>
        <width>111</width>
        <height>31</height>
@@ -310,7 +310,7 @@
     <widget class="QLabel" name="lb_GiAvailable_spot">
      <property name="geometry">
       <rect>
-       <x>205</x>
+       <x>310</x>
        <y>495</y>
        <width>111</width>
        <height>31</height>
@@ -326,7 +326,7 @@
     <widget class="QLabel" name="lb_mAvailable_spot">
      <property name="geometry">
       <rect>
-       <x>680</x>
+       <x>850</x>
        <y>495</y>
        <width>111</width>
        <height>31</height>
@@ -342,7 +342,7 @@
     <widget class="QLabel" name="lb_GiAvailable_scooters">
      <property name="geometry">
       <rect>
-       <x>200</x>
+       <x>310</x>
        <y>525</y>
        <width>111</width>
        <height>31</height>
@@ -358,7 +358,7 @@
     <widget class="QLabel" name="lb_LeAvailable_spot">
      <property name="geometry">
       <rect>
-       <x>445</x>
+       <x>585</x>
        <y>495</y>
        <width>111</width>
        <height>31</height>
@@ -374,7 +374,7 @@
     <widget class="QLabel" name="lb_GoAvailable_scooter">
      <property name="geometry">
       <rect>
-       <x>920</x>
+       <x>1120</x>
        <y>525</y>
        <width>111</width>
        <height>31</height>
@@ -412,8 +412,8 @@
      <rect>
       <x>0</x>
       <y>-21</y>
-      <width>1051</width>
-      <height>801</height>
+      <width>1280</width>
+      <height>900</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -428,7 +428,7 @@
     <widget class="QPushButton" name="btn_inactive_spot">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>440</x>
        <y>350</y>
        <width>441</width>
        <height>361</height>
@@ -463,7 +463,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>300</x>
+       <x>450</x>
        <y>230</y>
        <width>401</width>
        <height>361</height>
@@ -506,7 +506,7 @@
     <widget class="QLabel" name="spot_num">
      <property name="geometry">
       <rect>
-       <x>420</x>
+       <x>570</x>
        <y>430</y>
        <width>161</width>
        <height>41</height>
@@ -519,7 +519,7 @@
     <widget class="QLabel" name="scooter_num">
      <property name="geometry">
       <rect>
-       <x>420</x>
+       <x>570</x>
        <y>490</y>
        <width>161</width>
        <height>41</height>
@@ -533,7 +533,7 @@
      <property name="geometry">
       <rect>
        <x>55</x>
-       <y>50</y>
+       <y>55</y>
        <width>281</width>
        <height>41</height>
       </rect>
@@ -567,8 +567,8 @@
      <rect>
       <x>0</x>
       <y>-20</y>
-      <width>1051</width>
-      <height>821</height>
+      <width>1280</width>
+      <height>900</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -583,7 +583,7 @@
     <widget class="QPushButton" name="btn_stationM">
      <property name="geometry">
       <rect>
-       <x>525</x>
+       <x>692</x>
        <y>490</y>
        <width>241</width>
        <height>69</height>
@@ -594,6 +594,9 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(46, 52, 54);</string>
      </property>
      <property name="text">
       <string/>
@@ -611,7 +614,7 @@
     <widget class="QPushButton" name="btn_stationGo">
      <property name="geometry">
       <rect>
-       <x>765</x>
+       <x>970</x>
        <y>490</y>
        <width>241</width>
        <height>69</height>
@@ -622,6 +625,9 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(46, 52, 54);</string>
      </property>
      <property name="text">
       <string/>
@@ -639,7 +645,7 @@
     <widget class="QPushButton" name="btn_stationLe">
      <property name="geometry">
       <rect>
-       <x>285</x>
+       <x>420</x>
        <y>490</y>
        <width>241</width>
        <height>69</height>
@@ -650,6 +656,9 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(46, 52, 54);</string>
      </property>
      <property name="text">
       <string/>
@@ -667,69 +676,10 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="btngi_res_for_me">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>558</y>
-       <width>231</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>250</width>
-       <height>170</height>
-      </size>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btngi_5min_res">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>558</y>
-       <width>231</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>250</width>
-       <height>170</height>
-      </size>
-     </property>
-     <property name="autoDefault">
-      <bool>false</bool>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
     <widget class="QPushButton" name="btnlef_5min_res">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>425</x>
        <y>558</y>
        <width>231</width>
        <height>61</height>
@@ -757,7 +707,7 @@
     <widget class="QPushButton" name="btnlef_res_for_me">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>425</x>
        <y>558</y>
        <width>231</width>
        <height>61</height>
@@ -788,122 +738,10 @@
       <bool>false</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="btnm_5min_res">
-     <property name="geometry">
-      <rect>
-       <x>530</x>
-       <y>558</y>
-       <width>231</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>250</width>
-       <height>170</height>
-      </size>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btnm_res_for_me">
-     <property name="geometry">
-      <rect>
-       <x>530</x>
-       <y>558</y>
-       <width>231</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>250</width>
-       <height>170</height>
-      </size>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btngo_res_for_me">
-     <property name="geometry">
-      <rect>
-       <x>770</x>
-       <y>560</y>
-       <width>231</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>250</width>
-       <height>170</height>
-      </size>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btngo_5min_res">
-     <property name="geometry">
-      <rect>
-       <x>770</x>
-       <y>558</y>
-       <width>231</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>250</width>
-       <height>170</height>
-      </size>
-     </property>
-     <property name="flat">
-      <bool>false</bool>
-     </property>
-    </widget>
     <widget class="QPushButton" name="btn_stationGi">
      <property name="geometry">
       <rect>
-       <x>45</x>
+       <x>140</x>
        <y>490</y>
        <width>241</width>
        <height>69</height>
@@ -914,6 +752,9 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(46, 52, 54);</string>
      </property>
      <property name="text">
       <string/>
@@ -931,9 +772,9 @@
     <widget class="QLabel" name="welcomeUser">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>140</y>
-       <width>911</width>
+       <x>140</x>
+       <y>160</y>
+       <width>981</width>
        <height>411</height>
       </rect>
      </property>
@@ -944,7 +785,7 @@
     <widget class="QLabel" name="lb_gi_spot_num">
      <property name="geometry">
       <rect>
-       <x>225</x>
+       <x>310</x>
        <y>510</y>
        <width>51</width>
        <height>31</height>
@@ -960,7 +801,7 @@
     <widget class="QLabel" name="lb_go_spot_num">
      <property name="geometry">
       <rect>
-       <x>935</x>
+       <x>1145</x>
        <y>510</y>
        <width>51</width>
        <height>31</height>
@@ -976,7 +817,7 @@
     <widget class="QLabel" name="lb_le_spot_num">
      <property name="geometry">
       <rect>
-       <x>455</x>
+       <x>595</x>
        <y>510</y>
        <width>51</width>
        <height>31</height>
@@ -992,7 +833,7 @@
     <widget class="QLabel" name="lb_m_spot_num">
      <property name="geometry">
       <rect>
-       <x>695</x>
+       <x>860</x>
        <y>510</y>
        <width>51</width>
        <height>31</height>
@@ -1009,7 +850,7 @@
      <property name="geometry">
       <rect>
        <x>55</x>
-       <y>45</y>
+       <y>50</y>
        <width>281</width>
        <height>41</height>
       </rect>
@@ -1037,14 +878,8 @@
       <bool>true</bool>
      </property>
     </widget>
-    <zorder>btngi_res_for_me</zorder>
-    <zorder>btngi_5min_res</zorder>
     <zorder>btnlef_5min_res</zorder>
     <zorder>btnlef_res_for_me</zorder>
-    <zorder>btnm_5min_res</zorder>
-    <zorder>btnm_res_for_me</zorder>
-    <zorder>btngo_res_for_me</zorder>
-    <zorder>btngo_5min_res</zorder>
     <zorder>welcomeUser</zorder>
     <zorder>w_current_station</zorder>
     <zorder>btn_stationGi</zorder>
@@ -1062,8 +897,8 @@
      <rect>
       <x>0</x>
       <y>-20</y>
-      <width>1051</width>
-      <height>841</height>
+      <width>1280</width>
+      <height>900</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -1078,9 +913,9 @@
     <widget class="QPushButton" name="btn_return">
      <property name="geometry">
       <rect>
-       <x>110</x>
+       <x>220</x>
        <y>450</y>
-       <width>791</width>
+       <width>851</width>
        <height>200</height>
       </rect>
      </property>
@@ -1116,9 +951,9 @@
     <widget class="QLabel" name="lb_welcome_return">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>100</x>
        <y>160</y>
-       <width>931</width>
+       <width>1071</width>
        <height>261</height>
       </rect>
      </property>
@@ -1147,12 +982,15 @@
     </widget>
    </widget>
    <widget class="QGroupBox" name="return_spot">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>-20</y>
-      <width>1051</width>
-      <height>821</height>
+      <y>-25</y>
+      <width>1280</width>
+      <height>900</height>
      </rect>
     </property>
     <property name="maximumSize">
@@ -1167,7 +1005,7 @@
     <widget class="QPushButton" name="btn_return_spot">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>440</x>
        <y>350</y>
        <width>441</width>
        <height>361</height>
@@ -1178,6 +1016,9 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(46, 52, 54);</string>
      </property>
      <property name="text">
       <string/>
@@ -1199,8 +1040,8 @@
     <widget class="QLabel" name="return_spot_num">
      <property name="geometry">
       <rect>
-       <x>440</x>
-       <y>470</y>
+       <x>570</x>
+       <y>450</y>
        <width>161</width>
        <height>41</height>
       </rect>
@@ -1212,22 +1053,9 @@
     <widget class="QLabel" name="return_scooter_num">
      <property name="geometry">
       <rect>
-       <x>445</x>
-       <y>530</y>
+       <x>570</x>
+       <y>510</y>
        <width>161</width>
-       <height>41</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="give_current_station">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>50</y>
-       <width>281</width>
        <height>41</height>
       </rect>
      </property>
@@ -1241,8 +1069,8 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>320</x>
-       <y>260</y>
+       <x>450</x>
+       <y>230</y>
        <width>401</width>
        <height>361</height>
       </rect>
@@ -1272,8 +1100,8 @@
     <widget class="QLabel" name="current_station_2">
      <property name="geometry">
       <rect>
-       <x>55</x>
-       <y>45</y>
+       <x>60</x>
+       <y>55</y>
        <width>281</width>
        <height>41</height>
       </rect>
@@ -1285,7 +1113,7 @@
     <widget class="QPushButton" name="back">
      <property name="geometry">
       <rect>
-       <x>15</x>
+       <x>25</x>
        <y>42</y>
        <width>31</width>
        <height>54</height>
@@ -1301,6 +1129,12 @@
       <bool>true</bool>
      </property>
     </widget>
+    <zorder>btn_return_spot</zorder>
+    <zorder>un_lock_2</zorder>
+    <zorder>current_station_2</zorder>
+    <zorder>return_scooter_num</zorder>
+    <zorder>return_spot_num</zorder>
+    <zorder>back</zorder>
    </widget>
   </widget>
  </widget>
